// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HealthcareServiceTable /> should match snapshot with active status 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <Table>
        <TableHeader>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Name"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Category"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Type"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Program Name"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Identifier"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Active"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                    values={Object {}}
                />
            </TableHeaderColumn>
        </TableHeader>
        <TableRow>
            <TableRowColumn>
                name1
            </TableRowColumn>
            <TableRowColumn>
                categoryDisplay1
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    typeDisplay1
                    <br />
                </div>
                <div>
                    typeDisplay2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    programName1
                    <br />
                </div>
                <div>
                    programName2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    identifierSystem1
                    : 
                    identifierValue1
                    <br />
                </div>
                <div>
                    identifierSystem2
                    : 
                    identifierValue2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <FormattedMessage
                    defaultMessage="Active"
                    id="ocpui.components.HealthcareServiceTable.labelActive"
                    values={Object {}}
                />
            </TableRowColumn>
        </TableRow>
        <TableRow>
            <TableRowColumn>
                name2
            </TableRowColumn>
            <TableRowColumn>
                categoryDisplay2
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    typeDisplay3
                    <br />
                </div>
                <div>
                    typeDisplay4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    programName3
                    <br />
                </div>
                <div>
                    programName4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    identifierSystem3
                    : 
                    identifierValue3
                    <br />
                </div>
                <div>
                    identifierSystem4
                    : 
                    identifierValue4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <FormattedMessage
                    defaultMessage="Active"
                    id="ocpui.components.HealthcareServiceTable.labelActive"
                    values={Object {}}
                />
            </TableRowColumn>
        </TableRow>
    </Table>
</div>,
  "nodes": Array [
    <div>
      <Table>
            <TableHeader>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Name"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Category"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Type"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Program Name"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Identifier"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Active"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
            </TableHeader>
            <TableRow>
                  <TableRowColumn>
                        name1
                  </TableRowColumn>
                  <TableRowColumn>
                        categoryDisplay1
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              typeDisplay1
                              <br />
                        </div>
                        <div>
                              typeDisplay2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              programName1
                              <br />
                        </div>
                        <div>
                              programName2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              identifierSystem1
                              : 
                              identifierValue1
                              <br />
                        </div>
                        <div>
                              identifierSystem2
                              : 
                              identifierValue2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <FormattedMessage
                              defaultMessage="Active"
                              id="ocpui.components.HealthcareServiceTable.labelActive"
                              values={Object {}}
                        />
                  </TableRowColumn>
            </TableRow>
            <TableRow>
                  <TableRowColumn>
                        name2
                  </TableRowColumn>
                  <TableRowColumn>
                        categoryDisplay2
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              typeDisplay3
                              <br />
                        </div>
                        <div>
                              typeDisplay4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              programName3
                              <br />
                        </div>
                        <div>
                              programName4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              identifierSystem3
                              : 
                              identifierValue3
                              <br />
                        </div>
                        <div>
                              identifierSystem4
                              : 
                              identifierValue4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <FormattedMessage
                              defaultMessage="Active"
                              id="ocpui.components.HealthcareServiceTable.labelActive"
                              values={Object {}}
                        />
                  </TableRowColumn>
            </TableRow>
      </Table>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <HealthcareServiceTable
        elements={
                Array [
                        Object {
                          "active": true,
                          "category": Object {
                            "display": "categoryDisplay1",
                          },
                          "identifiers": Array [
                            Object {
                              "system": "identifierSystem1",
                              "value": "identifierValue1",
                            },
                            Object {
                              "system": "identifierSystem2",
                              "value": "identifierValue2",
                            },
                          ],
                          "logicalId": "logicalId1",
                          "name": "name1",
                          "programName": Array [
                            "programName1",
                            "programName2",
                          ],
                          "type": Array [
                            Object {
                              "display": "typeDisplay1",
                            },
                            Object {
                              "display": "typeDisplay2",
                            },
                          ],
                        },
                        Object {
                          "active": true,
                          "category": Object {
                            "display": "categoryDisplay2",
                          },
                          "identifiers": Array [
                            Object {
                              "system": "identifierSystem3",
                              "value": "identifierValue3",
                            },
                            Object {
                              "system": "identifierSystem4",
                              "value": "identifierValue4",
                            },
                          ],
                          "logicalId": "logicalId2",
                          "name": "name2",
                          "programName": Array [
                            "programName3",
                            "programName4",
                          ],
                          "type": Array [
                            Object {
                              "display": "typeDisplay3",
                            },
                            Object {
                              "display": "typeDisplay4",
                            },
                          ],
                        },
                      ]
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "elements": Array [
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay1",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem1",
                  "value": "identifierValue1",
                },
                Object {
                  "system": "identifierSystem2",
                  "value": "identifierValue2",
                },
              ],
              "logicalId": "logicalId1",
              "name": "name1",
              "programName": Array [
                "programName1",
                "programName2",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay1",
                },
                Object {
                  "display": "typeDisplay2",
                },
              ],
            },
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay2",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem3",
                  "value": "identifierValue3",
                },
                Object {
                  "system": "identifierSystem4",
                  "value": "identifierValue4",
                },
              ],
              "logicalId": "logicalId2",
              "name": "name2",
              "programName": Array [
                "programName3",
                "programName4",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay3",
                },
                Object {
                  "display": "typeDisplay4",
                },
              ],
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <Table>
                    <TableHeader>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Category"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Type"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Program Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Identifier"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                    </TableHeader>
                    <TableRow>
                              <TableRowColumn>
                                        name1
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay1
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay1
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName1
                                                  <br />
                                        </div>
                                        <div>
                                                  programName2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem1
                                                  : 
                                                  identifierValue1
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem2
                                                  : 
                                                  identifierValue2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
                    <TableRow>
                              <TableRowColumn>
                                        name2
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay2
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay3
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName3
                                                  <br />
                                        </div>
                                        <div>
                                                  programName4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem3
                                                  : 
                                                  identifierValue3
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem4
                                                  : 
                                                  identifierValue4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
          </Table>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
          <Table>
                    <TableHeader>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Category"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Type"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Program Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Identifier"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                    </TableHeader>
                    <TableRow>
                              <TableRowColumn>
                                        name1
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay1
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay1
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName1
                                                  <br />
                                        </div>
                                        <div>
                                                  programName2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem1
                                                  : 
                                                  identifierValue1
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem2
                                                  : 
                                                  identifierValue2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
                    <TableRow>
                              <TableRowColumn>
                                        name2
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay2
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay3
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName3
                                                  <br />
                                        </div>
                                        <div>
                                                  programName4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem3
                                                  : 
                                                  identifierValue3
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem4
                                                  : 
                                                  identifierValue4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
          </Table>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <HealthcareServiceTable
    elements={
        Array [
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay1",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem1",
                  "value": "identifierValue1",
                },
                Object {
                  "system": "identifierSystem2",
                  "value": "identifierValue2",
                },
              ],
              "logicalId": "logicalId1",
              "name": "name1",
              "programName": Array [
                "programName1",
                "programName2",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay1",
                },
                Object {
                  "display": "typeDisplay2",
                },
              ],
            },
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay2",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem3",
                  "value": "identifierValue3",
                },
                Object {
                  "system": "identifierSystem4",
                  "value": "identifierValue4",
                },
              ],
              "logicalId": "logicalId2",
              "name": "name2",
              "programName": Array [
                "programName3",
                "programName4",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay3",
                },
                Object {
                  "display": "typeDisplay4",
                },
              ],
            },
          ]
    }
/>,
}
`;

exports[`<HealthcareServiceTable /> should match snapshot with inactive status 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <Table>
        <TableHeader>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Name"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Category"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Type"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Program Name"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Identifier"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                    values={Object {}}
                />
            </TableHeaderColumn>
            <TableHeaderColumn>
                <FormattedMessage
                    defaultMessage="Active"
                    id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                    values={Object {}}
                />
            </TableHeaderColumn>
        </TableHeader>
        <TableRow>
            <TableRowColumn>
                name1
            </TableRowColumn>
            <TableRowColumn>
                categoryDisplay1
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    typeDisplay1
                    <br />
                </div>
                <div>
                    typeDisplay2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    programName1
                    <br />
                </div>
                <div>
                    programName2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    identifierSystem1
                    : 
                    identifierValue1
                    <br />
                </div>
                <div>
                    identifierSystem2
                    : 
                    identifierValue2
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <FormattedMessage
                    defaultMessage="Inactive"
                    id="ocpui.components.HealthcareServiceTable.labelInactive"
                    values={Object {}}
                />
            </TableRowColumn>
        </TableRow>
        <TableRow>
            <TableRowColumn>
                name2
            </TableRowColumn>
            <TableRowColumn>
                categoryDisplay2
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    typeDisplay3
                    <br />
                </div>
                <div>
                    typeDisplay4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    programName3
                    <br />
                </div>
                <div>
                    programName4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <div>
                    identifierSystem3
                    : 
                    identifierValue3
                    <br />
                </div>
                <div>
                    identifierSystem4
                    : 
                    identifierValue4
                    <br />
                </div>
            </TableRowColumn>
            <TableRowColumn>
                <FormattedMessage
                    defaultMessage="Active"
                    id="ocpui.components.HealthcareServiceTable.labelActive"
                    values={Object {}}
                />
            </TableRowColumn>
        </TableRow>
    </Table>
</div>,
  "nodes": Array [
    <div>
      <Table>
            <TableHeader>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Name"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Category"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Type"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Program Name"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Identifier"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
                  <TableHeaderColumn>
                        <FormattedMessage
                              defaultMessage="Active"
                              id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                              values={Object {}}
                        />
                  </TableHeaderColumn>
            </TableHeader>
            <TableRow>
                  <TableRowColumn>
                        name1
                  </TableRowColumn>
                  <TableRowColumn>
                        categoryDisplay1
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              typeDisplay1
                              <br />
                        </div>
                        <div>
                              typeDisplay2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              programName1
                              <br />
                        </div>
                        <div>
                              programName2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              identifierSystem1
                              : 
                              identifierValue1
                              <br />
                        </div>
                        <div>
                              identifierSystem2
                              : 
                              identifierValue2
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <FormattedMessage
                              defaultMessage="Inactive"
                              id="ocpui.components.HealthcareServiceTable.labelInactive"
                              values={Object {}}
                        />
                  </TableRowColumn>
            </TableRow>
            <TableRow>
                  <TableRowColumn>
                        name2
                  </TableRowColumn>
                  <TableRowColumn>
                        categoryDisplay2
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              typeDisplay3
                              <br />
                        </div>
                        <div>
                              typeDisplay4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              programName3
                              <br />
                        </div>
                        <div>
                              programName4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <div>
                              identifierSystem3
                              : 
                              identifierValue3
                              <br />
                        </div>
                        <div>
                              identifierSystem4
                              : 
                              identifierValue4
                              <br />
                        </div>
                  </TableRowColumn>
                  <TableRowColumn>
                        <FormattedMessage
                              defaultMessage="Active"
                              id="ocpui.components.HealthcareServiceTable.labelActive"
                              values={Object {}}
                        />
                  </TableRowColumn>
            </TableRow>
      </Table>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <HealthcareServiceTable
        elements={
                Array [
                        Object {
                          "active": false,
                          "category": Object {
                            "display": "categoryDisplay1",
                          },
                          "identifiers": Array [
                            Object {
                              "system": "identifierSystem1",
                              "value": "identifierValue1",
                            },
                            Object {
                              "system": "identifierSystem2",
                              "value": "identifierValue2",
                            },
                          ],
                          "logicalId": "logicalId1",
                          "name": "name1",
                          "programName": Array [
                            "programName1",
                            "programName2",
                          ],
                          "type": Array [
                            Object {
                              "display": "typeDisplay1",
                            },
                            Object {
                              "display": "typeDisplay2",
                            },
                          ],
                        },
                        Object {
                          "active": true,
                          "category": Object {
                            "display": "categoryDisplay2",
                          },
                          "identifiers": Array [
                            Object {
                              "system": "identifierSystem3",
                              "value": "identifierValue3",
                            },
                            Object {
                              "system": "identifierSystem4",
                              "value": "identifierValue4",
                            },
                          ],
                          "logicalId": "logicalId2",
                          "name": "name2",
                          "programName": Array [
                            "programName3",
                            "programName4",
                          ],
                          "type": Array [
                            Object {
                              "display": "typeDisplay3",
                            },
                            Object {
                              "display": "typeDisplay4",
                            },
                          ],
                        },
                      ]
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "elements": Array [
            Object {
              "active": false,
              "category": Object {
                "display": "categoryDisplay1",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem1",
                  "value": "identifierValue1",
                },
                Object {
                  "system": "identifierSystem2",
                  "value": "identifierValue2",
                },
              ],
              "logicalId": "logicalId1",
              "name": "name1",
              "programName": Array [
                "programName1",
                "programName2",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay1",
                },
                Object {
                  "display": "typeDisplay2",
                },
              ],
            },
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay2",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem3",
                  "value": "identifierValue3",
                },
                Object {
                  "system": "identifierSystem4",
                  "value": "identifierValue4",
                },
              ],
              "logicalId": "logicalId2",
              "name": "name2",
              "programName": Array [
                "programName3",
                "programName4",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay3",
                },
                Object {
                  "display": "typeDisplay4",
                },
              ],
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <Table>
                    <TableHeader>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Category"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Type"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Program Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Identifier"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                    </TableHeader>
                    <TableRow>
                              <TableRowColumn>
                                        name1
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay1
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay1
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName1
                                                  <br />
                                        </div>
                                        <div>
                                                  programName2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem1
                                                  : 
                                                  identifierValue1
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem2
                                                  : 
                                                  identifierValue2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Inactive"
                                                  id="ocpui.components.HealthcareServiceTable.labelInactive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
                    <TableRow>
                              <TableRowColumn>
                                        name2
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay2
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay3
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName3
                                                  <br />
                                        </div>
                                        <div>
                                                  programName4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem3
                                                  : 
                                                  identifierValue3
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem4
                                                  : 
                                                  identifierValue4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
          </Table>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          <Table>
                    <TableHeader>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Category"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderCategory"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Type"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderType"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Program Name"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderProgramName"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Identifier"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderIdentifier"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                              <TableHeaderColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.tableColumnHeaderActive"
                                                  values={Object {}}
                                        />
                              </TableHeaderColumn>
                    </TableHeader>
                    <TableRow>
                              <TableRowColumn>
                                        name1
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay1
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay1
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName1
                                                  <br />
                                        </div>
                                        <div>
                                                  programName2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem1
                                                  : 
                                                  identifierValue1
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem2
                                                  : 
                                                  identifierValue2
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Inactive"
                                                  id="ocpui.components.HealthcareServiceTable.labelInactive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
                    <TableRow>
                              <TableRowColumn>
                                        name2
                              </TableRowColumn>
                              <TableRowColumn>
                                        categoryDisplay2
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  typeDisplay3
                                                  <br />
                                        </div>
                                        <div>
                                                  typeDisplay4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  programName3
                                                  <br />
                                        </div>
                                        <div>
                                                  programName4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <div>
                                                  identifierSystem3
                                                  : 
                                                  identifierValue3
                                                  <br />
                                        </div>
                                        <div>
                                                  identifierSystem4
                                                  : 
                                                  identifierValue4
                                                  <br />
                                        </div>
                              </TableRowColumn>
                              <TableRowColumn>
                                        <FormattedMessage
                                                  defaultMessage="Active"
                                                  id="ocpui.components.HealthcareServiceTable.labelActive"
                                                  values={Object {}}
                                        />
                              </TableRowColumn>
                    </TableRow>
          </Table>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <HealthcareServiceTable
    elements={
        Array [
            Object {
              "active": false,
              "category": Object {
                "display": "categoryDisplay1",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem1",
                  "value": "identifierValue1",
                },
                Object {
                  "system": "identifierSystem2",
                  "value": "identifierValue2",
                },
              ],
              "logicalId": "logicalId1",
              "name": "name1",
              "programName": Array [
                "programName1",
                "programName2",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay1",
                },
                Object {
                  "display": "typeDisplay2",
                },
              ],
            },
            Object {
              "active": true,
              "category": Object {
                "display": "categoryDisplay2",
              },
              "identifiers": Array [
                Object {
                  "system": "identifierSystem3",
                  "value": "identifierValue3",
                },
                Object {
                  "system": "identifierSystem4",
                  "value": "identifierValue4",
                },
              ],
              "logicalId": "logicalId2",
              "name": "name2",
              "programName": Array [
                "programName3",
                "programName4",
              ],
              "type": Array [
                Object {
                  "display": "typeDisplay3",
                },
                Object {
                  "display": "typeDisplay4",
                },
              ],
            },
          ]
    }
/>,
}
`;
